<resources>
    <string name="app_name">SegundaProva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floatingActionButton">Btn novo</string>
    <string name="nome">Nome</string>
    <string name="tipo">Tipo</string>
    <string name="hor_rio">Horário</string>
    <string name="maximo_de_clientes">Maximo de Clientes</string>
    <string name="cadastroTitle">Cadastro!</string>
    <string name="n_de_funcionarios">N de funcionarios</string>
    <string name="adicionar">Adicionar!</string>
    <string name="alterar">Alterar!</string>
    <string name="id">id</string>
    <string name="sobre">Sobre</string>
    <string name="idadePerfil">26 Anos</string>
    <string name="nomePerfil">Erick Medeiros</string>
    <string name="periodoPerfil">4º Período do TADS</string>
    <string name="descriptionPerfilPhoto">Foto de Perfil</string>
    <string name="logo">Logo</string>
</resources>